feat: configure fixedOrder globally instead for every spawner
Signed-off-by: Karl Schrab <karl.schrab@fokus.fraunhofer.de>